kubernetes/user-service/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service

spec:
  selector:
    app: user-service

  ports:
    - port: 80
      targetPort: 3001

  type: ClusterIP
